Fixed open source coding at the bottom

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,11 @@
   font-family: "Montserrat", sans-serif;
 }
 
+.weather-app-wrapper {
+  max-width: 500px;
+  margin: 30px auto;
+}
+
 .form {
   width: fit-content;
   font-size: 14px;
