--- a/src/styles.css
+++ b/src/styles.css
@@ -8,17 +8,18 @@
 
 .weather-app-wrapper {
   max-width: 500px;
-  margin: 30px auto;
+  margin: 20px auto;
 }
 
-.form {
-  width: fit-content;
-  font-size: 14px;
-  margin-top: 5px;
+.search {
+  font-size: 15px;
 }
 
-.current-location {
-  text-align: right;
+.fa-search {
+  color: #ee9595;
+}
+.fa-search-location {
+  color: #ee9595;
 }
 
 h1 {
@@ -29,7 +30,7 @@ h1 {
 }
 
 .date {
-  font-size: 17px;
+  font-size: 15px;
 }
 
 .temperature {
@@ -40,17 +41,12 @@ h1 {
 
 .metric {
   color: #ee9595;
-  font-size: 14px;
-}
-
-.today-icon {
-  font-size: 95px;
-  color: #ee9595;
+  font-size: 15px;
 }
 
 .weather-list {
   text-align: right;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .forecast {
@@ -59,6 +55,6 @@ h1 {
 }
 
 .card {
-  font-size: 14px;
+  font-size: 15px;
   padding: 10px;
 }
