--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .container {
-  border: 3px solid #ec6e4c;
+  border: 3px solid #1ab2a8;
   padding: 20px;
   border-radius: 5px;
   max-width: 400px;
@@ -8,42 +8,42 @@
 
 .weather-app-wrapper {
   max-width: 400px;
-  margin: 20px auto;
+  margin: 10px auto;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
 }
 
 .form-control {
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .fa-search {
-  color: #ec6e4c;
+  color: #1ab2a8;
 }
-.fa-search-location {
-  color: #ec6e4c;
+.fa-location-arrow {
+  color: #1ab2a8;
 }
 
 h1 {
   font-size: 30px;
-  color: #ec6e4c;
+  color: #1ab2a8;
   text-transform: uppercase;
   font-weight: bold;
 }
 
 .date {
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .temperature {
   font-size: 30px;
-  color: #ec6e4c;
+  color: #1ab2a8;
   font-weight: bold;
 }
 
 .unit {
-  color: #ec6e4c;
-  font-size: 14px;
+  color: #1ab2a8;
+  font-size: 13px;
   text-decoration: none;
 }
 
@@ -59,15 +59,15 @@ h1 {
 
 .weather-list {
   text-align: right;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .forecast {
   text-align: center;
-  color: #ec6e4c;
+  color: #1ab2a8;
 }
 
 .card {
-  font-size: 14px;
+  font-size: 13px;
   padding: 8px;
 }
