Attempted forecast coding

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,7 @@ h1 {
   font-size: 13px;
 }
 
-.forecast-temperature .forecast-icon {
+.forecast-temperature {
   text-align: center;
   color: #1ab2a8;
 }
