--- a/src/styles.css
+++ b/src/styles.css
@@ -1,65 +1,68 @@
 .container {
-  border: 3px solid #1ab2a8;
+  border: 3px solid #fed19a;
   padding: 20px;
   border-radius: 5px;
-  max-width: 400px;
+  max-width: 500px;
   font-family: "Montserrat", sans-serif;
 }
 
 .weather-app-wrapper {
-  max-width: 400px;
+  max-width: 500px;
   margin: 10px auto;
   font-family: "Montserrat", sans-serif;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .form-control {
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .fa-search {
-  color: #1ab2a8;
+  color: #323c6b;
 }
 .fa-location-arrow {
-  color: #1ab2a8;
+  color: #323c6b;
 }
 
 h1 {
   font-size: 30px;
-  color: #1ab2a8;
+  color: #323c6b;
   text-transform: uppercase;
   font-weight: bold;
 }
 
 .date {
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .temperature {
   font-size: 30px;
-  color: #1ab2a8;
+  color: #fed19a;
   font-weight: bold;
 }
 
 .unit {
-  color: #1ab2a8;
-  font-size: 13px;
+  color: #323c6b;
+  font-weight: 700;
+  font-size: 12px;
+  top: -30px;
   text-decoration: none;
 }
 
 .unit .active {
-  color: black;
+  color: #323c6b;
   cursor: default;
   text-decoration: none;
 }
 
 .unit .active:hover {
   text-decoration: none;
+  color: #323c6b;
 }
 
 .weather-list {
   text-align: right;
-  font-size: 13px;
+  font-size: 12px;
   text-transform: capitalize;
 }
 
@@ -73,7 +76,26 @@ h1 {
 }
 
 .card {
-  font-size: 13px;
-  color: #1ab2a8;
+  font-size: 12px;
+  color: 323c6b;
   padding: 8px;
+}
+.icon-main {
+  align-content: flex-start;
+  max-width: 70px;
+}
+.icon-forecast {
+  max-width: 30px;
+}
+.signature {
+  text-decoration: none;
+  color: #323c6b;
+}
+.signature .active {
+  text-decoration: none;
+  color: #323c6b;
+}
+.signature .active:hover {
+  text-decoration: none;
+  color: #323c6b;
 }
